# olap-benchmarks

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pages.yml
docs/: post.md
notebooks/: clickbench.ipynb  generate-data.ipynb  generate.ipynb  input-test.ipynb  input.ipynb  kaggle_airbnb.ipynb  monetdb-inserts.ipynb  monetdb.ipynb  query-test.ipynb  query.ipynb  questdb.ipynb  results.ipynb  rtabench.ipynb  test.ipynb  time_series.ipynb  upsert-test.ipynb  upsert.ipynb  utils.py
olap_benchmarks/: __main__.py  results.py  settings.py
olap_benchmarks/dbs/: __init__.py  utils.py
olap_benchmarks/dbs/clickhouse/: __init__.py
olap_benchmarks/dbs/duckdb/: __init__.py
olap_benchmarks/dbs/monetdb/: __init__.py  binary.py  fetch.py  insert.py  settings.py  utils.py
olap_benchmarks/dbs/postgres/: __init__.py
olap_benchmarks/dbs/questdb/: __init__.py
olap_benchmarks/dbs/timescaledb/: __init__.py
olap_benchmarks/metrics/: measure.py  storage.py
olap_benchmarks/suites/: __init__.py
olap_benchmarks/suites/clickbench/: config.py
olap_benchmarks/suites/clickbench/schemas/: clickhouse.sql  monetdb.sql  postgres.sql  questdb.sql  timescaledb.sql
olap_benchmarks/suites/kaggle_airbnb/: config.py
olap_benchmarks/suites/kaggle_airbnb/queries/: 01_calendar_count.sql  02_join_one_table.sql  03_join_two_tables.sql  04_join_three_tables_array_agg.sql  05_join_three_tables_row_number.sql
olap_benchmarks/suites/kaggle_airbnb/schemas/: monetdb.sql  postgres.sql
olap_benchmarks/suites/rtabench/: config.py
olap_benchmarks/suites/rtabench/schemas/: clickhouse.sql  postgres.sql  questdb.sql  timescaledb.sql
olap_benchmarks/suites/time_series/: config.py
olap_benchmarks/suites/time_series/queries/: 007_latest_time_range_small_eav.sql  012_single_id_aggregate_large_eav.sql  017_multiple_ids_hourly_resample_small_wide.sql  019_multiple_ids_hourly_resample_small_eav.sql  020_multiple_ids_hourly_resample_large_eav.sql  021_multiple_ids_raw_large_wide.sql  022_multiple_ids_raw_large_eav.sql  024_batch_export_large_eav.sql  025_single_id_raw_large_wide.sql  026_single_id_raw_large_eav.sql  027_single_id_raw_desc_large_wide.sql  028_single_id_raw_desc_large_eav.sql  029_single_id_raw_filtered_large_wide.sql  030_single_id_raw_filtered_large_eav.sql  037_conditional_average_large_wide.sql  (+7 more)
site/: astro.config.mjs  package-lock.json  package.json
site/src/pages/: index.astro
tsdb_benchmarks/: __init__.py  __main__.py  benchmark.py  database.py  generate.py  settings.py
tsdb_benchmarks/dbs/: __init__.py  utils.py
tsdb_benchmarks/dbs/clickhouse/: __init__.py
tsdb_benchmarks/dbs/duckdb/: __init__.py
tsdb_benchmarks/dbs/monetdb/: __init__.py  insert.py  settings.py  utils.py
tsdb_benchmarks/dbs/questdb/: __init__.py
tsdb_benchmarks/dbs/timescaledb/: __init__.py
tsdb_benchmarks/debug/: test_result_concurrency.py
tsdb_benchmarks/metrics/: measure.py  sampler.py  schema.sql  storage.py
tsdb_benchmarks/monetdb/: __init__.py  binary.py  fetch.py  insert.py  settings.py  utils.py
tsdb_benchmarks/queries/: select_timestamp.sql  select_timestamps.sql
tsdb_benchmarks/suites/clickbench/: config.py
tsdb_benchmarks/suites/rtabench/: config.py  generate.py
tsdb_benchmarks/suites/time_series/: config.py  generate.py
(+256 files in other folders)
