[project]
name = "tsdb-benchmarks"
version = "0.1.0"
description = "Time series database benchmarks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fire>=0.7.0",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pre-commit>=4.2.0",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymonetdb==1.8.4",
    "pyparsing>=3.2.3",
    "python-dotenv>=1.1.1",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-monetdb==2.0.0",
]

[dependency-groups]
dev = [
    "hvplot>=0.11.3",
    "ipykernel>=6.29.5",
    "mypy>=1.16.1",
    "pandas-stubs>=2.2.3.250527",
    "pyarrow-stubs>=20.0.0.20250627",
    "pyinstrument>=5.0.2",
    "ruff>=0.12.0",
]

[tool.ruff]
lint.select = ["E", "F", "B", "I", "UP", "C4", "SIM"]
line-length = 120
