[project]
name = "olap-benchmarks"
version = "0.1.0"
description = "OLAP database benchmarks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=5.5.0",
    "clickhouse-connect>=0.8.18",
    "clickhouse-sqlalchemy>=0.3.2",
    "colorama>=0.4.6",
    "connectorx>=0.4.3",
    "docker>=7.1.0",
    "duckdb==1.4.0",
    "duckdb-engine>=0.17.0",
    "fire>=0.7.0",
    "httpx>=0.28.1",
    "numpy>=2.3.1",
    "pandas>=2.3.0",
    "polars>=1.31.0",
    "pre-commit>=4.2.0",
    "psycopg2-binary>=2.9.10",
    "pyarrow>=20.0.0",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pymonetdb==1.8.4",
    "pyparsing>=3.2.3",
    "python-dotenv>=1.1.1",
    "questdb>=3.0.0",
    "questdb-connect>=1.1.4",
    "setproctitle>=1.3.6",
    "setuptools>=80.9.0",
    "sqlalchemy>=2.0.41",
    "sqlalchemy-monetdb==2.0.0",
]

[dependency-groups]
dev = [
    "hvplot>=0.11.3",
    "ipykernel>=6.29.5",
    "mypy>=1.16.1",
    "pyright",
    "pandas-stubs>=2.2.3.250527",
    "pyarrow-stubs>=20.0.0.20250627",
    "pyinstrument>=5.0.2",
    "ruff>=0.12.0",
    "types-colorama>=0.4.15.20240311",
    "types-docker>=7.1.0.20250705",
    "types-psutil>=7.0.0.20250601",
]

[tool.ruff]
lint.select = ["E", "F", "B", "I", "UP", "C4", "SIM", "ANN"]
line-length = 120
